# serenium

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  serenium.py  themes.py
.github/workflows/: ci.yml
man/: serenium.1
tests/: __init__.py  test_serenium.py
